bdr.BDR.scala.error
Compilation error:
BDR:1: error: not found: type char
val message:char
            ^BDR:1: error: only classes can have declared but undefined members
val message:char
    ^