bdr.BDR.scala.code
val message:char
var continue:Boolean = true

while(continue) {
  message = getIndication()
  
  if(message == "R") {
    right()
    forward()
  } else if(message == "L") {
    left()
    forward()
  } else if(message == "I") {
    right()
    right()
    forward()
  } else if(message == "A") {
    forward()
  } else if(message == "B") {
    forward()
    forward()
  } else if(message == "C") {
    forward()
    forward()
    forward()
  } else if(message == "Z") {
    backward()
  } else {
    continue = false
  }
}
